# PrimordialisBodyplanManager

./: CMakeLists.txt  LICENSE  README.md
manager/source/: FileManager.cpp  GlobalConfigManager.cpp  SteamManager.cpp  common.hpp
scripts/: install_bodyplans.cpp  test.cpp  uninstall_bodyplans.cpp
source/include/: LocalConfigManager.cpp  LocalConfigManager.hpp  SteamManager.hpp  common.hpp
source/includes/: FileManager.hpp  GlobalConfigManager.hpp  SteamManager.cpp
source/scripts/: install_bodyplans.cpp  test.cpp  uninstall_bodyplans.cpp
